	* Bugfix: Auto linking found also background image source as link
	* Bugfix: TodoyuSql::buildInListQueryPart() value when negated and input is empty
	* Bugfix: Duration Pickers configuration failed
	* Bugfix: Class for fieldset didn't work properly/clean
	* Bugfix: isRequired() checks now for available field and for false value
	* Bugfix: Content tab did not store selected tab correctly
	* Library: Upgraded PHPsass from version 201203071100 to 201211282000
	* Library: Upgraded from PHPMailer-lite 5.1 to PHPMailer 5.2.1
	* Library: Highcharts 2.2.3
	* Library: tinyMCE 3.5.4.1

core 2.2.0 - 2012-05-03
	* Added: Parity of list items in widgets is refreshed on drop/resort
	* Added: Balloon info rendering, style and JS
	* Added: Hooks in TodoyuMail
	* Added: Empty listing shows "no items" notice
	* Added: Special chars encoding of CSV exported data
	* Added: Added core hook of loaded extension type configs: 'loadconfig.extkey.type'
	* Added: Installer now focuses it's first form field on page load
	* Added: prototype.js plugin "svginner"
	* Added: TodoyuTime.getDayTimestampsInRange can now optionally ommit weekend days
	* Added: Todoyu.Popups (open, openElement, openContent) can now optionally position the popup to a top coordinate
	* Added: JavaScript Date prototypes: addDays(), subtractDays(), isToday()
	* Added: JS-Handling for contentItemTabs
	* Added: Todoyu.Form.assistDurationInput() for onblur-validation of duration input fields
	* Added: New form hook for data modification immediately before rendering (use TodoyuFormHook::registerRenderForm() for callback registration)
	* Added: global confirmation dialog for toggling of record-types with exclusive "is_preferred" attribute
	* Added: new DB query building method: TodoyuSql::buildInArrayQuery()
	* Added: General content item inline tabs management and rendering to core
	* Added: "greaterThan" form validator
	* Added: Methods for fetching right / section and resp. required right from extension rights matrix